--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,3 +13,14 @@ dependencies = [
     "sse-starlette>=3.2.0",
     "uvicorn[standard]>=0.40.0",
 ]
+
+[dependency-groups]
+dev = [
+    "httpx>=0.28.1",
+    "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
+]
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
+asyncio_mode = "auto"
